--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Basic HTML Page</title>
+  <title>About Me</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f8f8;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 40px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      color: #333;
+      text-align: center;
+    }
+    p {
+      color: #666;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>This is a basic HTML page.</p>
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
-  <p>Thanks for visiting!</p>
+  <div class="container">
+    <h1>About Me</h1>
+    <p>
+      I'm Akhil Menon
+    </p>
+    <p>
+      With over 5 , and cross-browser compatibility.
+    </p>
+    <p>
+      When I'm not coding, you can find me exploring the outdoors,
+      playing the guitar, or trying out new recipes in the kitchen.
+    </p>
+  </div>
 </body>
 </html>
