--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About Me</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 40px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      color: #333;
-      text-align: center;
-    }
-    p {
-      color: #666;
-      line-height: 1.6;
-    }
-  </style>
+  <title>Welcome to My Website</title>
 </head>
 <body>
-  <div class="container">
-    <h1>About Me</h1>
-    <p>
-      I'm Akhil Menon
-    </p>
-    <p>
-      With over 5 , and cross-browser compatibility.
-    </p>
-    <p>
-      When I'm not coding, you can find me exploring the outdoors,
-      playing the guitar, or trying out new recipes in the kitchen.
-    </p>
-  </div>
+  <header>
+    <h1>Welcome to My Website</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="home">
+      <h2>Home</h2>
+      <p>Welcome to my website! This is the home section of my site.</p>
+    </section>
+    <section id="about">
+      <h2>About</h2>
+      <p>Learn more about me and my background in this section.</p>
+    </section>
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <p>Showcase your work and projects in this section.</p>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Contact me for inquiries or to get in touch.</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2023 My Website. All rights reserved.</p>
+  </footer>
 </body>
 </html>
